--- a/project-3.ipynb
+++ b/project-3.ipynb
@@ -9,19 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gensim in c:\\users\\lucia\\anaconda3\\lib\\site-packages (4.3.0)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (1.24.4)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (1.10.1)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (5.2.1)\n",
-      "Requirement already satisfied: FuzzyTM>=0.4.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (2.0.9)\n",
-      "Requirement already satisfied: pandas in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from FuzzyTM>=0.4.0->gensim) (1.5.3)\n",
-      "Requirement already satisfied: pyfume in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from FuzzyTM>=0.4.0->gensim) (0.3.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pandas->FuzzyTM>=0.4.0->gensim) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pandas->FuzzyTM>=0.4.0->gensim) (2023.3.post1)\n",
-      "Requirement already satisfied: simpful==2.12.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pyfume->FuzzyTM>=0.4.0->gensim) (2.12.0)\n",
-      "Requirement already satisfied: fst-pso==1.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pyfume->FuzzyTM>=0.4.0->gensim) (1.8.1)\n",
-      "Requirement already satisfied: miniful in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from fst-pso==1.8.1->pyfume->FuzzyTM>=0.4.0->gensim) (0.0.6)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->FuzzyTM>=0.4.0->gensim) (1.16.0)\n"
+      "Requirement already satisfied: gensim in /Users/abhaybapat/anaconda3/envs/is310/lib/python3.9/site-packages (4.3.3)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.18.5 in /Users/abhaybapat/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (1.26.4)\n",
+      "Requirement already satisfied: scipy<1.14.0,>=1.7.0 in /Users/abhaybapat/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (1.13.1)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /Users/abhaybapat/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (7.1.0)\n",
+      "Requirement already satisfied: wrapt in /Users/abhaybapat/anaconda3/envs/is310/lib/python3.9/site-packages (from smart-open>=1.8.1->gensim) (1.17.2)\n"
      ]
     }
    ],
@@ -49,14 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('cat', 0.8798075914382935), ('dogs', 0.8344309329986572), ('pet', 0.7449565529823303), ('puppy', 0.7236376404762268), ('horse', 0.7109653949737549), ('animal', 0.6817063689231873), ('pig', 0.655417263507843), ('boy', 0.6545308232307434), ('cats', 0.6471933126449585), ('rabbit', 0.6468629240989685)]\n",
+      "[==================================================] 100.0% 128.1/128.1MB downloaded\n",
+      "[('cat', 0.8798074126243591), ('dogs', 0.8344309329986572), ('pet', 0.7449564337730408), ('puppy', 0.723637580871582), ('horse', 0.7109653949737549), ('animal', 0.6817063093185425), ('pig', 0.655417263507843), ('boy', 0.6545308232307434), ('cats', 0.6471932530403137), ('rabbit', 0.6468630433082581)]\n",
       "0.8798075\n"
      ]
     }
@@ -99,14 +92,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.30817  ,  0.30938  ,  0.52803  , -0.92543  , -0.73671  ,\n",
+       "        0.63475  ,  0.44197  ,  0.10262  , -0.09142  , -0.56607  ,\n",
+       "       -0.5327   ,  0.2013   ,  0.7704   , -0.13983  ,  0.13727  ,\n",
+       "        1.1128   ,  0.89301  , -0.17869  , -0.0019722,  0.57289  ,\n",
+       "        0.59479  ,  0.50428  , -0.28991  , -1.3491   ,  0.42756  ,\n",
+       "        1.2748   , -1.1613   , -0.41084  ,  0.042804 ,  0.54866  ,\n",
+       "        0.18897  ,  0.3759   ,  0.58035  ,  0.66975  ,  0.81156  ,\n",
+       "        0.93864  , -0.51005  , -0.070079 ,  0.82819  , -0.35346  ,\n",
+       "        0.21086  , -0.24412  , -0.16554  , -0.78358  , -0.48482  ,\n",
+       "        0.38968  , -0.86356  , -0.016391 ,  0.31984  , -0.49246  ,\n",
+       "       -0.069363 ,  0.018869 , -0.098286 ,  1.3126   , -0.12116  ,\n",
+       "       -1.2399   , -0.091429 ,  0.35294  ,  0.64645  ,  0.089642 ,\n",
+       "        0.70294  ,  1.1244   ,  0.38639  ,  0.52084  ,  0.98787  ,\n",
+       "        0.79952  , -0.34625  ,  0.14095  ,  0.80167  ,  0.20987  ,\n",
+       "       -0.86007  , -0.15308  ,  0.074523 ,  0.40816  ,  0.019208 ,\n",
+       "        0.51587  , -0.34428  , -0.24525  , -0.77984  ,  0.27425  ,\n",
+       "        0.22418  ,  0.20164  ,  0.017431 , -0.014697 , -1.0235   ,\n",
+       "       -0.39695  , -0.0056188,  0.30569  ,  0.31748  ,  0.021404 ,\n",
+       "        0.11837  , -0.11319  ,  0.42456  ,  0.53405  , -0.16717  ,\n",
+       "       -0.27185  , -0.6255   ,  0.12883  ,  0.62529  , -0.52086  ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.23088  ,  0.28283  ,  0.6318   , -0.59411  , -0.58599  ,\n",
+       "        0.63255  ,  0.24402  , -0.14108  ,  0.060815 , -0.7898   ,\n",
+       "       -0.29102  ,  0.14287  ,  0.72274  ,  0.20428  ,  0.1407   ,\n",
+       "        0.98757  ,  0.52533  ,  0.097456 ,  0.8822   ,  0.51221  ,\n",
+       "        0.40204  ,  0.21169  , -0.013109 , -0.71616  ,  0.55387  ,\n",
+       "        1.1452   , -0.88044  , -0.50216  , -0.22814  ,  0.023885 ,\n",
+       "        0.1072   ,  0.083739 ,  0.55015  ,  0.58479  ,  0.75816  ,\n",
+       "        0.45706  , -0.28001  ,  0.25225  ,  0.68965  , -0.60972  ,\n",
+       "        0.19578  ,  0.044209 , -0.31136  , -0.68826  , -0.22721  ,\n",
+       "        0.46185  , -0.77162  ,  0.10208  ,  0.55636  ,  0.067417 ,\n",
+       "       -0.57207  ,  0.23735  ,  0.4717   ,  0.82765  , -0.29263  ,\n",
+       "       -1.3422   , -0.099277 ,  0.28139  ,  0.41604  ,  0.10583  ,\n",
+       "        0.62203  ,  0.89496  , -0.23446  ,  0.51349  ,  0.99379  ,\n",
+       "        1.1846   , -0.16364  ,  0.20653  ,  0.73854  ,  0.24059  ,\n",
+       "       -0.96473  ,  0.13481  , -0.0072484,  0.33016  , -0.12365  ,\n",
+       "        0.27191  , -0.40951  ,  0.021909 , -0.6069   ,  0.40755  ,\n",
+       "        0.19566  , -0.41802  ,  0.18636  , -0.032652 , -0.78571  ,\n",
+       "       -0.13847  ,  0.044007 , -0.084423 ,  0.04911  ,  0.24104  ,\n",
+       "        0.45273  , -0.18682  ,  0.46182  ,  0.089068 , -0.18185  ,\n",
+       "       -0.01523  , -0.7368   , -0.14532  ,  0.15104  , -0.71493  ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model['cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('france', 0.7682002186775208), ('paris', 0.7591814994812012), ('et', 0.7173689007759094), ('est', 0.7076817154884338), ('pour', 0.6992500424385071), ('sur', 0.6955581307411194), ('dans', 0.6915071606636047), ('monde', 0.6913139224052429), ('du', 0.6902377009391785), ('lyon', 0.68704754114151)]\n"
+      "[('monty', 0.6886237263679504), ('php', 0.586538553237915), ('perl', 0.5784407258033752), ('cleese', 0.5446676015853882), ('flipper', 0.5112984776496887), ('ruby', 0.5066928267478943), ('spamalot', 0.505638837814331), ('javascript', 0.5030569434165955), ('reticulated', 0.4983375668525696), ('monkey', 0.49764129519462585)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.most_similar('python', topn=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.69796  ,  0.026999 ,  0.068505 ,  0.065858 ,  0.40963  ,\n",
+       "       -0.38146  , -0.56633  , -0.045967 , -0.019801 ,  0.40051  ,\n",
+       "        0.45928  , -0.44242  , -0.25291  ,  0.56519  , -0.42689  ,\n",
+       "        0.66001  ,  0.74877  , -0.61531  , -0.93373  , -0.70314  ,\n",
+       "        0.25014  ,  0.47758  , -0.27972  ,  0.10961  , -0.18595  ,\n",
+       "       -1.1541   ,  0.014234 , -0.15504  ,  1.2269   , -0.083134 ,\n",
+       "       -0.96295  ,  0.26263  , -0.10777  ,  0.2001   , -0.60195  ,\n",
+       "        0.60761  ,  1.1275   , -0.032634 , -0.69365  ,  0.071476 ,\n",
+       "        0.14524  , -0.56237  , -0.1676   ,  0.71003  ,  0.39329  ,\n",
+       "       -0.60368  ,  0.63867  , -0.19897  ,  0.35546  ,  0.50909  ,\n",
+       "        0.32231  , -0.58378  ,  0.061194 ,  0.58127  , -1.3054   ,\n",
+       "       -2.2658   , -0.0047571,  0.27903  ,  0.12816  ,  0.09481  ,\n",
+       "        0.15086  ,  1.0745   , -0.83654  ,  0.10862  ,  0.15205  ,\n",
+       "        0.17329  , -0.52959  ,  0.72439  , -0.40303  ,  0.11472  ,\n",
+       "       -0.32336  , -0.83121  , -0.12508  ,  0.053349 , -0.17481  ,\n",
+       "       -0.031144 ,  0.76887  , -0.42122  , -0.34157  ,  0.11762  ,\n",
+       "        0.33802  ,  0.19437  , -0.32066  ,  0.40762  , -1.009    ,\n",
+       "        0.047386 , -0.43626  ,  0.051032 ,  0.069644 ,  0.099814 ,\n",
+       "        0.28354  , -0.65775  ,  0.75207  ,  1.018    , -0.18832  ,\n",
+       "        0.32236  ,  0.97124  ,  0.50001  ,  0.44992  , -0.012456 ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model['berlin']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('paris', 0.8827144503593445), ('france', 0.755802571773529), ('french', 0.7075165510177612), ('prohertrib', 0.6943174004554749), ('berlin', 0.666556179523468), ('brussels', 0.6574430465698242), ('lyon', 0.6526200175285339), ('london', 0.64079749584198), ('le', 0.6403627991676331), ('strasbourg', 0.6346526741981506)]\n",
+      "[('lowlanders', 0.4844588041305542), ('zebras', 0.45914992690086365), ('dicots', 0.45332765579223633), ('non-arabs', 0.45208773016929626), ('amerindians', 0.4478238821029663), ('buffalos', 0.4475124180316925), ('giraffes', 0.4466330111026764), ('bavarians', 0.4452260732650757), ('welshmen', 0.44406628608703613), ('dingos', 0.4440328776836395)]\n",
+      "[('dogs', 0.8921768665313721), ('cats', 0.8814380764961243), ('dog', 0.7873795628547668), ('animals', 0.7512702345848083), ('pets', 0.7392117977142334), ('cows', 0.6835324168205261), ('pet', 0.679297685623169), ('horses', 0.6774964928627014), ('pigs', 0.6755765080451965), ('animal', 0.6683687567710876)]\n"
      ]
     }
    ],
@@ -601,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "is310",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
